Ограничение кол-ва назначений по кол-ву сотрудников